# ODEplotter

./: LICENSE.txt  README.md  pyproject.toml
ODEplotter/: __init__.py  discrete_solution.py  obstacles.py  predictors.py  root_finder.py  solution_animator.py
ODEplotter/ODEs/: linear_ode.py  ode.py  planar_ode.py
ODEplotter/methods/: __init__.py  method_data.py  solution_method.py
ODEplotter/methods/linear_multistep/: adams_bashforth.py  adams_moulton.py  bdf.py  euler.py  implicit_euler.py  trapezoidal_rule.py
ODEplotter/methods/runge_kutta/: adaptive_runge_kutta.py  adaptive_runge_kutta_PI.py  rk4.py  rk43.py  runge_kutta.py
ODEplotter/utils/: exceptions.py  predictors.py  root_finder.py  types.py
examples/: curvature_and_torsion.py  lorenz_attractor.py  pendulum.py  pendulum_object_oriented.py  pendulum_with_friction_and_obstacle.py  planar_flow.py
tests/: test_discrete_solution.py  test_methods.py  test_norms.py  test_ode.py  test_root_finder.py  test_types.py
