[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ODEplotter"
version = "0.0.1a0"
authors = [
  { name="Truls Henriksson", email="trulshenriksson@gmail.com" },
]
description = "A simple package for solving, plotting, and animating ordinary differential equations (ODEs)."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TrulsHenriksson/ODEplotter"
Issues = "https://github.com/TrulsHenriksson/ODEplotter/issues"